mobile button and menu corrected by removing position:absolute and setting same pixel height from top. Copied over mobile/desktop pointer correction for button highlight on mobile.

--- a/atxgd_general.css
+++ b/atxgd_general.css
@@ -126,7 +126,8 @@ body {
 
 #atxgd_mobile-burger {
     display: none;
-    position: absolute;
+    position: relative;
+    top: 24px;
     background-color: var(--deep-blue);
     width: 56px;
     height: 42px;
@@ -134,12 +135,23 @@ body {
     box-shadow: inset 0.1em 0.1em 0.1em 0 var(--light-blue), inset -0.1em -0.1em 0.1em 0 var(--shadow-grey);
     left: 50%;
     transform: translateX(-50%);
-    top: 72px;
 }
 #atxgd_mobile-burger:hover {
     background-color: var(--clear-sky-blue);
 }
 
+@media (pointer:fine) {
+    #atxgd_mobile-burger:hover {
+        color: var(--mud-brown);
+        background-color: var(--clear-sky-blue);
+    }
+}
+@media (pointer:coarse){
+    #atxgd_mobile-burger:active {
+        color: var(--mud-brown);
+        background-color: var(--clear-sky-blue);
+    }
+}
 @media screen and (max-width: 600px), screen and (orientation: portrait) {
     .atxgd_logo-wrapper {
         text-align: left;
@@ -151,8 +163,8 @@ body {
         flex-direction: column;
         margin-left: 50%;
         transform: translateX(-50%);
-        top: 48px;
         padding-top: 4px;
+        top: 24px;
         gap: 1em;
         background-color: var(--deep-blue);
         color: var(--light-blue);
@@ -171,14 +183,6 @@ body {
     .atxgd_nav-current-page::before {
         display: none;
     }
-}
-
-@media screen and (min-width: 1080px){
-    
-}
-
-@media screen and (max-width: 1080px){
-    
 }
 
 /*__article__*/
